# BathTracer

./: CMakeLists.txt  README.md
cuda/: device_programs.cu  device_types.h  light.h  shading.h  volume.h
cuda/materials/: dielectric.h  lambert_diffuse.h  material.h  material_funcs.h  mirror.h  specular_microfacet.h
cuda/util/: color.h  onb.h  random.h  sampling.h  util.h  vec_math.h
src/: CMakeLists.txt  main.cpp  rendersettings.h
src/app/: path_tracer_app.cpp  path_tracer_app.h
src/camera/: camera.cpp  camera.h
src/core/: pt_types.h
src/gui/: gui_layer.cpp  gui_layer.h
src/optix/: check.h  load_obj.cpp  optix_renderer.cpp  optix_renderer.h  optix_scene.cpp  optix_scene.h  optix_stubs.cpp  records.h
src/platform/: display.cpp  display.h  texture2d.cpp  texture2d.h
src/util/: constants.h  io.cpp  io.h  texture.h
